# picts-compressor

./: CMakeLists.txt  HeaderOptions.cpp  HeaderOptions.h  HuffmanTree.cpp  HuffmanTree.h  HuffmanTreeNode.cpp  HuffmanTreeNode.h  Parameters.cpp  Parameters.h  README.md  Utilities.cpp  Utilities.h  ifbitstream.cpp  ifbitstream.h  imageRun.sh  main.cpp  ofbitstream.cpp  ofbitstream.h  testImages.sh
